--- a/_template/scss/main.scss
+++ b/_template/scss/main.scss
@@ -1,2 +1,7 @@
-@import './modules/all';
-@import './partials/all';
+@import './base/module';
+@import './components/module';
+@import './layout/module';
+@import './pages/module';
+@import './themes/module';
+@import './utils/module';
+@import './vendors/module';
